fixed html code

--- a/about.html
+++ b/about.html
@@ -1,62 +1,65 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="us">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">	
+	<link rel="stylesheet" href="css/style.css">
 	<title>About us</title>
 </head>
 
-<body>
-	<header>
-		<nav>
-			<div>
-				<div><a href="">Мастер-классы</a></div>
-				<div><a href="">Мебель на заказ</a></div>
-			</div>
-			<img src="#" alt="">
-			<div>
-				<div><a href="">Контакты</a></div>
-				<div><a href="">О нас</a></div>
-			</div>
+<body class="body">
+	<header class="header">
+		<nav class="header__nav">
+			<ul class="header__nav__list">
+				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
+				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
+				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
+				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="about.html">О нас</a></li>
+			</ul>			
 		</nav>
 	</header>
 	
     <main>
-		<section>		
-			<h1>История создания мастерской</h1>
-			<h1>NIKASON BRAND</h1>
-            <img src="#" alt="img">
+		<section">		
+			<h1 class="title">История создания мастерской</h1>
+			<h1 class="title">NIKASON BRAND</h1>
+            <img src="img/founders.jpg" alt="founders">
 			<div>
 				<div>
-					<p>+10 лет</p>
-					<p>На рынке по производству мебели</p>
+					<p class="title">+10 лет</p>
+					<p class="text">На рынке по производству мебели</p>
 				</div>
 				<div>
-					<p>+1500</p>
-					<p>Изготовлено мебели</p>
+					<p class="title">+1500</p>
+					<p class="text">Изготовлено мебели</p>
 				</div>
 				<div>
-					<p>120 лет</p>
-					<p>Самой старинной мебели для реставрации</p>
+					<p class="title">120 лет</p>
+					<p class="text">Самой старинной мебели для реставрации</p>
 				</div>
 			</div>
 		</section>
 
-		<section>
+		<section class="founder">
 			<div>
-				<img src="#" alt="img">
+				<img src="img/Kolodeznikov-Matchitov.jpg" alt="Kolodeznikov-Matchitov">
 			</div>
 			<div>
-				<h3>Никита Колодезников-Матчитов</h3>
-				<p>Основатель мастерской</p>
-				<p>С детства я был окружен творческими людьми, мой дедушка был строителем и 
+				<p class="text2">Никита Колодезников-Матчитов</p>
+				<p class="text">Основатель мастерской</p>
+				<p class="text">С детства я был окружен творческими людьми, мой дедушка был строителем и 
                     мастером по дереву. Спустя много лет и мне передалась его любовь к дереву - в 
                     свободное время мастерил для себя небольшие  изделия из древесины.</p>
-                <p>Более десяти лет назад построил двухэтажный гараж, на втором этаже 
+                <p class="text">Более десяти лет назад построил двухэтажный гараж, на втором этаже 
                     расположилась наша мастерская. Начинал производство практически “с нуля”, 
                     с каждой зарплаты понемногу откладывал на покупку инстурментов и станков.</p>
-                <p>Постепенно начали появляться первые заказы. Несколько лет назад мы с супругой 
+                <p class="text">Постепенно начали появляться первые заказы. Несколько лет назад мы с супругой 
                     решили еще заняться ремонтом и реставрацией мебели. Эту идею предложили 
                     сами клиенты, поскольку периодически приходили с таким запросом. В основном, 
                     реставрацией занимается супруга Саргылана. Мы с ней одна сплоченная, дружная 
@@ -65,54 +68,49 @@
 			</div>			
 		</section>
        
-        <section>
+        <section class="philosophy">
             <div>
-				<h1>Философия мастерской NIKASON</h1>
-				<q>Создавать что-то по-настоящему ценное и уникальное. Дарить радость и уют в каждый дом</q>
+				<h2 class="title">Философия мастерской NIKASON</h2>
+				<p class="text3">Создавать что-то по-настоящему ценное и уникальное. Дарить радость и уют в каждый дом</p>
 			</div>
         </section>
 
-		<section>
-			<h1>СМИ о нас</h1>
-			<p>О нашей мастерской пишут многие издания Якутии</p>
+		<section class="mass_media">
+			<h2 class="title">СМИ о нас</h2>
+			<p class="text">О нашей мастерской пишут многие издания Якутии</p>
 			<div>
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
+				<img src="img/mass_media1.jpg" alt="mass_media1">
+				<img src="img/mass_media2.jpg" alt="mass_media2">
+				<img src="img/mass_media3.jpg" alt="mass_media3">
+				<img src="img/mass_media4.jpg" alt="mass_media4">
 			</div>			
 		</section>
         
-        <section>
-            <h1>Оставьте заявку и мы с вами свяжемся</h1>
-			<button>Оставить заявку</button>
+        <section class="application">
+            <h1 class="title">Оставьте заявку и мы с вами свяжемся</h1>
+			<button class="button"><p class="button_text">Оставить заявку</p></button>
         </section>
 
 	</main>
 
-	 <footer>
-		<div>
-			<div>
-				<p>ИП Колодезников-Матчитов Н.И.</p>
-                <p>ИНН 143515646663</p>
-			</div>
-			<div>
-				<a href="">Мастер-классы</a>
-				<a href="">Мебель на заказ</a>
-			</div>
-			<div>
-				<a href="">Контакты</a>
-				<a href="">О нас</a>
-			</div>
-			<div>
-				<a href="">Политика кофиденциальности</a>
-				<a href="">Договор оферты</a>
-			</div>
-			<div>
-				<a href=""><img src="#" alt="img"></a>
-				<a href=""><img src="#" alt="img"></a>
-			</div>
-		</div>
+	<footer class="footer">
+		<nav class="footer__nav">
+			<ul class="footer__nav__list">
+				<li class="footer__nav__item">
+					<p>ИП Колодезников-Матчитов Н.И.</p>
+					<p>ИНН 143515646663</p>
+				</li>
+				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
+				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
+				<li><a class="footer__nav__item" href="">Контакты</a></li>
+				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
+				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
+				<li><a href=""><img src="img/instagram.svg" alt="instagram"></a></li>
+				<li><a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a></li>
+				<li class="footer__nav__item"><p>+7 967 927-22-27</p></li>
+			</ul>
+		</nav>		
 	</footer>
 </body>
 
