--- a/index.html
+++ b/index.html
@@ -4,148 +4,148 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Furniture to order</title>
 </head>
 
-<body>
-	<header>
-		<nav>
-			<div>
-				<div><a href="">Мастер-классы</a></div>
-				<div><a href="">Мебель на заказ</a></div>
-			</div>
-			<img src="#" alt="">
-			<div>
-				<div><a href="">Контакты</a></div>
-				<div><a href="">О нас</a></div>
-			</div>
+<body class="body">
+	<header class="header">
+		<nav class="header__nav">
+			<ul class="header__nav__list">
+				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
+				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
+				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
+				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="about.html">О нас</a></li>
+			</ul>			
 		</nav>
 	</header>
 
 	<main>
-		<section>
-			<img src="#" alt="img">
-			<p>Воплотим вашу любую задумку в реальность</p>
-			<h1>Столярная мастерская</h1>
-			<h1>NIKASON BRAND</h1>
-			<button>Заказать мебель</button>
+		<section class="custom_furniture">
+			<!-- <img src="img/carpentry_workshop.png" alt="carpentry_workshop"> -->
+			<p class="text"><span class="span_main">Воплотим вашу любую задумку в реальность</span></p>
+			<h1 class="title"><span class="span_main">Столярная мастерская</span></h1>
+			<h1 class="title"><span class="span_main">NIKASON BRAND</span></h1>
+			<button class="button_main"><p class="button_main_text">Заказать мебель</p></button>
 		</section> 
 
-		<section>
+		<section class="advantages">
 			<div>
-				<h1>Почему выбирают нас</h1>
+				<h1 class="title">Почему выбирают нас</h1>
 				<div>
-					<p>Давно на рынке</p>
-					<p>Опыт работы на рынке больше 10 лет</p>
+					<p class="title2">Давно на рынке</p>
+					<p class="text4">Опыт работы на рынке больше 10 лет</p>
 				</div>
 				<div>
-					<p>Гарантия качества</p>
-					<p>Предоставляем гарантию 12 месяцев на изделия</p>
+					<p class="title2">Гарантия качества</p>
+					<p class="text4">Предоставляем гарантию 12 месяцев на изделия</p>
 				</div>
 				<div>
-					<p>Юридическая прозрачность</p>
-					<p>Заключаем с каждым клиентом договор</p>
+					<p class="title2">Юридическая прозрачность</p>
+					<p class="text4">Заключаем с каждым клиентом договор</p>
 				</div>
 				<div>
-					<p>Экологичность</p>
-					<p>Мебель из натуральной древесины, краски без токсичного состава</p>
+					<p class="title2">Экологичность</p>
+					<p class="text4">Мебель из натуральной древесины, краски без токсичного состава</p>
 				</div>
 				<div>
-					<p>Эксклюзивность</p>
-					<p>Каждая мебель изготовлена по индивидуальному дизайну</p>
+					<p class="title2">Эксклюзивность</p>
+					<p class="text4">Каждая мебель изготовлена по индивидуальному дизайну</p>
 				</div>
 				<div>
-					<p>Долговечность</p>
-					<p>Мебель из массива дерева прослужит даже вашим детям</p>
+					<p class="title2">Долговечность</p>
+					<p class="text4">Мебель из массива дерева прослужит даже вашим детям</p>
 				</div>
 			</div>
 		</section>
 
-		<section>
-			<h1>Портфолио</h1>
+		<section class="portfolio">
+			<h1 class="title">Портфолио</h1>
 			<div>
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				
+				<img src="img/portfolio_1.jpg" alt="portfolio_1">								
+			</div>
+			<div>
+				<img src="img/portfolio_2.jpg" alt="portfolio_2">
+				<img src="img/portfolio_3.jpg" alt="portfolio_3">
+				<img src="img/portfolio_4.jpg" alt="portfolio_4">
+				<img src="img/portfolio_5.jpg" alt="portfolio_5">
+				<img src="img/portfolio_6.jpg" alt="portfolio_6">
+				<img src="img/portfolio_7.jpg" alt="portfolio_7">
+				<img src="img/portfolio_8.jpg" alt="portfolio_8">
 			</div>
 		</section>
 
-		<section>
-			<h1>Этапы производства</h1>
-			<table>
-				<tbody>
-					<tr>
-						<td>
-							<p>Встреча с клиентом</p>
-						</td>
-						<td>
-							<p>Подписание договора, внесение предоплаты</p>
-						</td>
-						<td>
-							<p>Выезд к клиенту на замер (при необходимости)</p>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<p>Составление проекта</p>
-						</td>
-						<td>
-							<p>Изготовление и согласование всех стадий с клиентом</p>
-						</td>
-						<td>
-							<p>Доставка и монтаж изделия (при необходимости)</p>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+		<section class="stages">
+			<h1 class="title">Этапы производства</h1>
+			<ul class="stages_list">
+				<li class="text5">
+					<p class="title">1</p>
+					<p>Встреча с клиентом</p>			
+				</li>
+				<li class="text5">
+					<p class="title">2</p>
+					<p>Подписание договора, внесение предоплаты</p>					
+				</li>
+				<li class="text5">
+					<p class="title">3</p>
+					<p>Выезд к клиенту на замер (при необходимости)</p>					
+				</li>
+				<li class="text5">
+					<p class="title">4</p>
+					<p>Составление проекта</p>					
+				</li>
+				<li class="text5">
+					<p class="title">5</p>
+					<p>Изготовление и согласование всех стадий с клиентом</p>				
+				</li>
+				<li class="text5">
+					<p class="title">6</p>
+					<p>Доставка и монтаж изделия (при необходимости)</p>				
+				</li>
+			</ul>
 		</section>
 
-		<section>
-			<h1>Клиенты о нас</h1>
+		<section class="about">
+			<h1 class="title">Клиенты о нас</h1>
 			<div>
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
-				<img src="#" alt="img">
+				<img src="img/review_1.jpg" alt="review_1">
+				<img src="img/review_2.jpg" alt="review_2">
+				<img src="img/review_3.jpg" alt="review_3">
+				<img src="img/review_4.jpg" alt="review_4">
+				<img src="img/review_5.jpg" alt="review_5">
 			</div>			
 		</section>
         
-        <section>
-            <h1>Оставьте заявку и мы с вами свяжемся</h1>
-			<button>Оставить заявку</button>
+        <section class="application">
+            <h1 class="title">Оставьте заявку и мы с вами свяжемся</h1>
+			<button class="button"><p class="button_text">Оставить заявку</p></button>
         </section>
 	</main>
 	
-    <footer>
-		<div>
-			<div>
-				<p>ИП Колодезников-Матчитов Н.И.</p>
-                <p>ИНН 143515646663</p>
-			</div>
-			<div>
-				<a href="">Мастер-классы</a>
-				<a href="">Мебель на заказ</a>
-			</div>
-			<div>
-				<a href="">Контакты</a>
-				<a href="">О нас</a>
-			</div>
-			<div>
-				<a href="">Политика кофиденциальности</a>
-				<a href="">Договор оферты</a>
-			</div>
-			<div>
-				<a href=""><img src="#" alt="img"></a>
-				<a href=""><img src="#" alt="img"></a>
-			</div>
-		</div>
+    <footer class="footer">
+		<nav class="footer_nav">
+			<ul class="footer__nav__list">
+				<li class="footer__nav__item">
+					<p>ИП Колодезников-Матчитов Н.И.</p>
+					<p>ИНН 143515646663</p>
+				</li>
+				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
+				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
+				<li><a class="footer__nav__item" href="">Контакты</a></li>
+				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
+				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
+			</ul>
+			<div>													
+				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
+				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>			
+		    </div>
+		</nav>		
 	</footer>
 </body>
 </html>
