--- a/master.html
+++ b/master.html
@@ -4,183 +4,203 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Tenor+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Master classes</title>
 </head>
 
-<body>
-	<header>
-		<nav>
-			<div>
-				<div><a href="">Мастер-классы</a></div>
-				<div><a href="">Мебель на заказ</a></div>
-			</div>
-			<img src="#" alt="">
-			<div>
-				<div><a href="">Контакты</a></div>
-				<div><a href="">О нас</a></div>
-			</div>
+<body class="body">
+	<header class="header">
+		<nav class="header__nav">
+			<ul class="header__nav__list">
+				<li><a class="header__nav__link" href="master.html">Мастер-классы</a></li>
+				<li><a class="header__nav__link" href="index.html">Мебель на заказ</a></li>
+				<li class="logo"><img src="img/logo.svg" alt="logo"></li>
+				<li><a class="header__nav__link" href="">Контакты</a></li>
+				<li><a class="header__nav__link" href="about.html">О нас</a></li>
+			</ul>			
 		</nav>
 	</header>
 
 	<main>
-		<section>
-			<img src="#" alt="img">
+		<section class="main">		
 			<div>
-				<h1>Нам доверяют мебель с историей в 120 лет</h1>
-				<button>Смотреть мастер-классы</button>
+				<h1 class="title"><span class="span_main">Нам доверяют мебель с историей в 120 лет</span></h1>
+				<button class="button_main"><p class="button_main_text2">Смотреть мастер-классы</p></button>
+			</div>
+		</section>
+
+		<section class="works">
+			<h2 class="title">Наши работы</h2>
+			<div>
+				<figure>
+					<img src="img/before_1.jpg" alt="before_1">
+					<figcaption class="text6">До</figcaption>
+				</figure>
+				<figure>
+					<img src="img/after_1.jpg" alt="after_1">
+					<figcaption class="text6">После</figcaption>
+				</figure>
+				<figure>
+					<img src="img/before_2.jpg" alt="before_2">
+					<figcaption class="text6">До</figcaption>
+				</figure>
+				<figure>
+					<img src="img/after_2.jpg" alt="after_2">
+					<figcaption class="text6">После</figcaption>
+				</figure>
+				<figure>
+					<img src="img/before_3.jpg" alt="before_3">
+					<figcaption class="text6">До</figcaption>
+				</figure>
+				<figure>
+					<img src="img/after_3.jpg" alt="after_3">
+					<figcaption class="text6">После</figcaption>
+				</figure>
+				<figure>
+					<img src="img/before_4.jpg" alt="before_4">
+					<figcaption class="text6">До</figcaption>
+				</figure>
+				<figure>
+					<img src="img/after_4.jpg" alt="after_4">
+					<figcaption class="text6">После</figcaption>
+				</figure>
+			</div>
+			<button class="button2"><p class="button_text">Смотреть больше примеров</p></button>
+		</section>
+
+		<section class="techniques">
+			<h2 class="title">Какие техники изучите на МК</h2>
+			
+			<div>
+				<div class="line"></div>
+				<ul class="techniques_list">
+					<li class="text7">
+						<div class="circle"><p class="circle_text">1</p></div>
+						<p>Снятие старой краски</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">2</p></div>
+						<p>Устранение царапин и мелких дефектов</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">3</p></div>
+						<p>Ремонт маленьких и больших сколов</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">4</p></div>
+						<p>Ремонт поломанной и расклеившейся мебели</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">5</p></div>
+						<p>Замена старых поврежденных деталей</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">6</p></div>
+						<p>Приемы и идеи декора. Улучшение дизайна старой мебели</p>
+					</li>
+					<li class="text7">
+						<div class="circle"><p class="circle_text">7</p></div>
+						<p>Покраска изделия</p>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="second_life">
+			<div>				
+				<h1 class="title"><span class="span_main">Подари вторую жизнь старой мебели и сохрани историю вашей семьи</span></h1>
+			</div>
+		</section>
+
+		<section class="master_classes">
+			<h1 class="title">Мастер-классы по реставрации мебели</h1>
+			<div>
+				<figure>
+					<img src="img/buffet.jpg" alt="buffet">
+					<figcaption class="text8">Буфет</figcaption>
+				</figure>
+				<figure>
+					<img src="img/box.jpg" alt="box">
+					<figcaption class="text8">Сундук</figcaption>
+				</figure>
+				<figure>
+					<img src="img/dresser.jpg" alt="dresser">
+					<figcaption class="text8">Комод</figcaption>
+				</figure>
+				<figure>
+					<img src="img/soviet_chair.jpg" alt="soviet_chair">
+					<figcaption class="text8">Советское кресло</figcaption>
+				</figure>
+				<figure>
+					<img src="img/table.jpg" alt="table">
+					<figcaption class="text8">Стол</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair.jpg" alt="chair">
+					<figcaption class="text8">Стул</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair_upholstery.jpg" alt="chair_upholstery">
+					<figcaption class="text8">Обивка стула</figcaption>
+				</figure>
+				<figure>
+					<img src="img/chair_repair.jpg" alt="chair_repair">
+					<figcaption class="text8">Ремонт стула</figcaption>
+				</figure>
 			</div>
 		</section>
 
 		<section>
-			<h1>Наши работы</h1>
+			<h1 class="title">Мастер-классы по столярному делу</h1>
 			<div>
-				<div>
-					<img src="#" alt="img">
-					<p>До</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>После</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>До</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>После</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>До</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>После</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>До</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>После</p>
-				</div>
-			</div>
-			<button>Смотреть больше примеров</button>
-		</section>
-
-		<section>
-			<h1>Какие техники изучите на МК</h1>
-			<div>
-				<ol>
-					<li>Снятие старой краски</li>
-					<li>Устранение царапин и мелких дефектов</li>
-					<li>Ремонт маленьких и больших сколов</li>
-					<li>Ремонт поломанной и расклеившейся мебели</li>
-					<li>Замена старых поврежденных деталей</li>
-					<li>Приемы и идеи декора. Улучшение дизайна старой мебели</li>
-					<li>Покраска изделия</li>
-				</ol>
+				<figure>
+					<img src="img/console_table.jpg" alt="console_table">
+					<figcaption class="text8">Консольный столик</figcaption>
+				</figure>
+				<figure>
+					<img src="img/carpentry_for_beginners.jpg" alt="carpentry_for_beginners">
+					<figcaption class="text8">Столярное дело для начинающих</figcaption>
+				</figure>
 			</div>
 		</section>
 
 		<section>
 			<div>
-				<img src="#" alt="img">
-				<h1>Подари вторую жизнь старой мебели и сохрани историю вашей семьи</h1>
-			</div>
-		</section>
-
-		<section>
-			<h1>Мастер-классы по реставрации мебели</h1>
-			<div>
-				<div>
-					<img src="#" alt="img">
-					<p>Буфет</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Сундук</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Комод</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Советское кресло</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Стол</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Стул</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Обивка стула</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Ремонт стула</p>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<h1>Мастер-классы по столярному делу</h1>
-			<div>
-				<div>
-					<img src="#" alt="img">
-					<p>Консольный столик</p>
-				</div>
-				<div>
-					<img src="#" alt="img">
-					<p>Столярное дело для начинающих</p>
-				</div>
-			</div>
-		</section>
-
-		<section>
-			<div>
-				<h1>Руководство по редизайну деревянной мебели</h1>
-				<p>Здесь мы собрали всю информацию от подбора инстурментов и 
+				<h1 class="title">Руководство по редизайну деревянной мебели</h1>
+				<p class="text7">Здесь мы собрали всю информацию от подбора инстурментов и 
                     материалов до сборки мебели и фурнитуры. Чтобы вы 
                     самостоятельно могли разобраться с нюансами работы со старой 
                     мебелью из дерева. Наше руководство непременно станет вашей 
                     настольной книгой по реставрации мебели.</p>
-				<button>Подробнее</button>
-				<img src="#" alt="img">
+				<button class="button"><p class="button_text">Подробнее</p></button>
+				<img src="img/redesign.jpg" alt="redesign">
 			</div>
 		</section>
 	</main>
 
-	<footer>
-		<div>
-			<div>
-				<p>ИП Колодезников-Матчитов Н.И.</p>
-                <p>ИНН 143515646663</p>
-			</div>
-			<div>
-				<a href="">Мастер-классы</a>
-				<a href="">Мебель на заказ</a>
-			</div>
-			<div>
-				<a href="">Контакты</a>
-				<a href="">О нас</a>
-			</div>
-			<div>
-				<a href="">Политика кофиденциальности</a>
-				<a href="">Договор оферты</a>
-			</div>
-			<div>
-				<a href=""><img src="#" alt="img"></a>
-				<a href=""><img src="#" alt="img"></a>
-			</div>
-		</div>
+	<footer class="footer">
+		<nav class="footer__nav">
+			<ul class="footer__nav__list">
+				<li class="footer__nav__item">
+					<p>ИП Колодезников-Матчитов Н.И.</p>
+					<p>ИНН 143515646663</p>
+				</li>
+				<li><a class="footer__nav__item" href="master.html">Мастер-классы</a></li>
+				<li><a class="footer__nav__item" href="index.html">Мебель на заказ</a></li>
+				<li><a class="footer__nav__item" href="">Контакты</a></li>
+				<li><a class="footer__nav__item" href="about.html">О нас</a></li>
+				<li><a class="footer__nav__item" href="">Политика кофиденциальности</a></li>
+				<li><a class="footer__nav__item" href="">Договор оферты</a></li>
+			</ul>
+			<div>													
+				<a href=""><img src="img/instagram.svg" alt="instagram"></a>
+				<a href=""><img src="img/whatsapp.svg" alt="whatsapp"></a>			
+		    </div>
+		</nav>		
 	</footer>
 </body>
 
